--- a/lazyloading.html
+++ b/lazyloading.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>jQuery.getScript demo</title>
+  <title>jQuery.lazyloading demo</title>
   
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script>
-var url = "https://raw.githack.com/imad047/00004.js/master/externaljs.js";
+var url = "https://filesc.github.io/js/lazyloading.js";
 $.getScript( url, function() {
-if(externaljs=='https://raw.githack.com/imad047/00004.js/master/useexternaljs.html'){
+if(externaljs=='https://filesc.github.io/js/lazyloading.html'){
     alert('He is '+externaljs);
   }else{
    alert('He is not '+externaljs);
